--- a/.github/workflows/step_docker.yml
+++ b/.github/workflows/step_docker.yml
@@ -7,9 +7,11 @@ on:
       registry:
         type: string
         description: Registry
+        required: true
       organization:
         type: string
         description: Organization
+        required: true
     secrets:
       login:
         required: true
