--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
   docker:
     uses: ./.github/workflows/step_docker.yml
     with:
-      registry: ${{ github.event.inputs.docker_hub_registry }}
-      organization: ${{ github.event.inputs.docker_hub_organization }}
+      registry: ${{ github.event.inputs.docker_hub_registry || 'docker.io' }}
+      organization: ${{ github.event.inputs.docker_hub_organization || 'mahendrapaipuri' }}
     secrets:  
       login: ${{ secrets.DOCKER_HUB_LOGIN }}
       password: ${{ secrets.DOCKER_HUB_PASSWORD }}
