--- a/.github/workflows/step_docker.yml
+++ b/.github/workflows/step_docker.yml
@@ -32,6 +32,7 @@ jobs:
           which clang
           command -v clang
           clang --version
+          echo $PATH
           if [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
             echo "name=$(echo ${GITHUB_REF##*/})" >> $GITHUB_OUTPUT
           elif [[ "${GITHUB_EVENT_NAME}" == "pull_request" ]]; then
