--- a/.github/workflows/step_docker.yml
+++ b/.github/workflows/step_docker.yml
@@ -26,6 +26,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Test llvm
+        run: |
+          which clang
+          ls -la /usr/bin/
+          ls -la /usr/local/bin
+          ls -la /usr/lib
+
       - name: Get target branch
         id: target_branch
         run: |
