--- a/.github/workflows/step_docker.yml
+++ b/.github/workflows/step_docker.yml
@@ -52,6 +52,8 @@ jobs:
           else
             echo "name=nightly" >> $GITHUB_OUTPUT
           fi
+          which clang
+          which llc
 
       - name: Print vars
         run: |
