--- a/.github/workflows/step_docker.yml
+++ b/.github/workflows/step_docker.yml
@@ -26,12 +26,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Test llvm
+      - name: Install chrome
         run: |
-          which clang
-          ls -la /usr/bin/
-          ls -la /usr/local/bin
-          ls -la /usr/lib
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          which google-chrome
 
       - name: Get target branch
         id: target_branch
